* Data.FastPackedString is now gone. * Date.ByteString joins us at third-party/. * Pugs is now 2x faster on startup!
git-svn-id: http://svn.pugscode.org/pugs@10107 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/README
+++ b/README
@@ -65,11 +65,11 @@ under a BSD-style license.  See src/RRegex/LICENSE.
 The "UTF8" subsystem is derived from Sven Moritz Hallberg's work,
 under a BSD-style license.  See src/UTF8.lhs.
 
-The "FastPackedString" subsystem is derived from Don Stewart et all's work,
-under a BSD-style license.  See src/Data/FastPackedString.hs.
-
 The "PArrows" subsystem is derived from Einar Karttunen's work,
 under a BSD-style license.  See src/Text/Parser/PArrows.cabal.
+
+The "ByteString" subsystem is derived from Don Stewart et all's work,
+under a BSD-style license.  See third-party/fps/LICENSE.
 
 The "TextRegexLazy" subsystem is derived from Christopher Kuklewic's
 work, under a BSD-style license.  See
