Pugs::Grammar::MiniPerl6  * MiniPerl6 language construction described  * basic grammar added  * parsing sample added
git-svn-id: http://svn.pugscode.org/pugs@10116 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Grammar-MiniPerl6/README
+++ b/misc/pX/Common/Pugs-Grammar-MiniPerl6/README
@@ -75,3 +75,19 @@ Currently, this rule is in src/Pugs/Parser/Literal.hs:
     	doYada "!!!" = "&die"
     	doYada _ = error "Bad yada symbol"
 
+
+Spec of MiniPerl6
+
+The MiniPerl6 includes only these language constructions
+(c.f. lib/Pugs/Grammar/MiniPerl6.grammar)
+
+   Var: $<name> $0           # XXX what does $0 mean?
+   Return: return
+   Call: Foo( exp, exp... )  # parantheses are necessary
+         Bar
+   Infix: ~ + -              # not completely listed
+   Lit: [exp, exp]
+        (exp, exp)
+        123
+        "string"  # no 'string', no interpolating, no escape except \" and \\
+
