i'm an author, too!
git-svn-id: http://svn.pugscode.org/pugs@10122 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -77,6 +77,7 @@ James "theorbtwo" Mastros        (JMASTROS)
 Jeff Horwitz                     (JHORWITZ)  
 Jens "jrieks" Rieks
 Jeremy "jvoorhis" Voorhis
+Jerry "particle" Gay             (PARTICLE)
 Jesse "obra" Vincent             (JESSE)     
 Joao Fernando Ferreira           (JOAO)      João Fernando Ferreira
 Jody Belka                       (KNEW)      
