adding myself [even though i haven't done anything yet ...]
git-svn-id: http://svn.pugscode.org/pugs@10123 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -81,7 +81,8 @@ Jerry "particle" Gay             (PARTICLE)
 Jesse "obra" Vincent             (JESSE)     
 Joao Fernando Ferreira           (JOAO)      João Fernando Ferreira
 Jody Belka                       (KNEW)      
-John van Krieken                 (VLADTZ)    
+John van Krieken                 (VLADTZ)
+John "js0000" Saylor
 Jonathan Scott "PerlJam" Duff    (DUFF)      
 Jonathan Worthington             (JONATHAN)  
 Jos Boumans                      (KANE)
