* S02: Change the section headings "Atoms" and "Molecules" to the more   descriptive "Lexical Conventions" and "Whitespace and Comments".   Reported by: Wassercrats
git-svn-id: http://svn.pugscode.org/pugs@23383 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -23,7 +23,7 @@ Apocalypses, which are frozen in time as "historical documents".
 These updates are not marked--if a Synopsis disagrees with its
 Apocalypse, assume the Synopsis is correct.)
 
-=head1 Atoms
+=head1 Lexical Conventions
 
 =over 4
 
@@ -71,7 +71,7 @@ mappings introduced in the future.
 
 =back
 
-=head1 Molecules
+=head1 Whitespace and Comments
 
 =over 4
 
