* S06: aufrank++ pointed out the quicksort example was still   using the (?$foo) form in Sigs instead of ($foo?).
git-svn-id: http://svn.pugscode.org/pugs@23384 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1098,7 +1098,7 @@ if we don't care about anything but the matching.
 
 Instead of specifying an array parameter as an array:
 
-    sub quicksort (@data, ?$reverse, ?$inplace) {
+    sub quicksort (@data, $reverse?, $inplace?) {
         my $pivot := shift @data;
         ...
     }
@@ -1107,7 +1107,7 @@ it may be broken up into components in the signature, by
 specifying the parameter as if it were an anonymous array of
 parameters:
 
-    sub quicksort ([$pivot, *@data], ?$reverse, ?$inplace) {
+    sub quicksort ([$pivot, *@data], $reverse?, $inplace?) {
         ...
     }
 
