--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 6 Apr 2006
+  Last Modified: 30 Apr 2006
   Number: 12
-  Version: 13
+  Version: 14
 
 =head1 Overview
 
@@ -221,7 +221,7 @@ use the dot form of parentheses:
     .doit()	# okay, no arguments
     .doit ()	# ILLEGAL (two terms in a row)
     .doit.()	# okay, no arguments, same as .doit()
-    .doit. .()	# okay, no arguments, same as .doit() (long dot form)
+    .doit\ .()	# okay, no arguments, same as .doit() (long dot form)
 
 However, you can turn any of the legal forms above into a list
 operator by appending a colon:
@@ -230,7 +230,7 @@ operator by appending a colon:
     .doit(1): 2,3	# okay, one argument plus list
     .doit (): 1,2,3	# ILLEGAL (two terms in a row)
     .doit.(1): 2,3	# okay, same as .doit(1,2,3)
-    .doit. .(1,2): 3	# okay, same as .doit(1,2,3)
+    .doit\ .(1,2): 3	# okay, same as .doit(1,2,3)
 
 In particular, this allows us to pass a closure in addition to the
 "normal" arguments:
