* S03: Correct the perl5ish "map" example to have an extra comma.   17:44 < TimToady> audreyt: foo {...} 1,2,3 is wrong, needs a comma.
git-svn-id: http://svn.pugscode.org/pugs@23391 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -698,8 +698,8 @@ no term starts with "C<..>".
 The new operators C<< ==> >> and C<< <== >> are akin to UNIX pipes, but
 work with functions that accept and return lists.  For example,
 
-     @result = map { floor($^x / 2) }
-                 grep { /^ \d+ $/ }
+     @result = map { floor($^x / 2) },
+                 grep { /^ \d+ $/ },
                    @data;
 
 Can also now be written:
