--- a/doc/trunk/design/syn/S29.pod
+++ b/doc/trunk/design/syn/S29.pod
@@ -10,18 +10,13 @@ Rod Adams <rod@rodadams.net>
 
 =head1 VERSION
 
-  Maintainer: Rod Adams <rod@rodadams.net>
+  Maintainer: Larry Wall <larry@wall.org>
 
 =head1 Placeholder
 
 This pod is just a placeholder for the draft of Synopsis 29 that
-Rod Adams is currently building and maintaining, until we feel that
-the draft has matured sufficiently to warrant inclusion with the
-other Apocalypses and Synopses.
+currently lives at
 
-Until they appear here, the latest drafts are available at
-
-    http://www.rodadams.net/Perl/S29.pod
-    http://www.rodadams.net/Perl/S29.html
+    http://svn.openfoundry.org/pugs/docs/Perl6/Spec/Functions.pod
 
 
